--- a/stylish/xul_big.css
+++ b/stylish/xul_big.css
@@ -1,5 +1,6 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
+.toolbar-primary,
 textbox#urlbar {
     height: 30px !important;
 }
